--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx}\""
   },
   "devDependencies": {
+    "@electron/notarize": "^3.1.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -66,7 +67,9 @@
       "node_modules/**/*"
     ],
     "mac": {
-      "target": "dmg"
+      "target": "dmg",
+      "category": "public.app-category.developer-tools",
+      "identity": null
     },
     "win": {
       "target": "nsis"
